added redirect support

--- a/system/templates/backend/layout-backend.html.twig
+++ b/system/templates/backend/layout-backend.html.twig
@@ -27,9 +27,10 @@
   {% if no_nav == false %}
     <nav>
       <ul>
-        <li><a href="/admin/article">article <span>maintainance</span></a></li>
-        <li><a href="/admin/author">author <span>maintainance</span></a></li>
-        <li><a href="/admin/tag">tag <span>maintainance</span></a></li>
+        <li><a href="/admin/article">article <span>admin</span></a></li>
+        <li><a href="/admin/redirect">redirect <span>admin</span></a></li>
+        <li><a href="/admin/author">author <span>admin</span></a></li>
+        <li><a href="/admin/tag">tag <span>admin</span></a></li>
       </ul>
     </nav>
   {% endif %}
