added support for images on authors

--- a/public_html/fx/css/backend.css
+++ b/public_html/fx/css/backend.css
@@ -43,3 +43,7 @@ textarea.tinymce[name="manchet"] {
 .mceWrapper {
   text-shadow: none;
 }
+
+form {
+  background-image: url(/fx/img/design/body-bg.png);
+}
