--- a/system/templates/backend/author/form.html.twig
+++ b/system/templates/backend/author/form.html.twig
@@ -2,10 +2,27 @@
 
 {% block head %}
 <script type="text/javascript" src="/fx/scripts/author.js"></script>
+<script type="text/javascript" src="/fx/scripts/tinymce/tinymce/jscripts/tiny_mce/jquery.tinymce.js"></script>
+<script type="text/javascript">
+$(function() {
+  $('textarea.tinymce').tinymce({
+    script_url : '/fx/scripts/tinymce/tinymce/jscripts/tiny_mce/tiny_mce.js',
+    mode : "textareas",
+    theme : "advanced",
+    plugins : "inlinepopups",
+    theme_advanced_buttons1 : "mylistbox,mysplitbutton,bold,italic,underline,separator,strikethrough,bullist,numlist,undo,redo,link,unlink,|,code",
+    theme_advanced_buttons2 : "",
+    theme_advanced_buttons3 : "",
+    theme_advanced_toolbar_location : "top",
+    theme_advanced_toolbar_align : "left",
+    theme_advanced_statusbar_location : "bottom"
+  });
+});
+</script>
 {% endblock %}
 
 {% block content %}
-<form action="/admin/author/add" method="post" id="author-form">
+<form action="/admin/author/add" method="post" id="author-form" enctype="multipart/form-data">
   <table>
     <tr>
       <th>name</th>
@@ -25,8 +42,12 @@
     </tr>
     <tr>
       <th>description</th>
-      <td><textarea name="content">{{ author.content }}</textarea></td>
+      <td><textarea name="content" class="tinymce">{{ author.content }}</textarea></td>
     </tr>
+      <tr>
+        <th>image</th>
+        <td><input type="file" name="image" /> (max file size: {{ maxsize }}) </td>
+      </tr>
     <tr>
       <th></th>
       <td>
