--- a/public_html/fx/css/less.css
+++ b/public_html/fx/css/less.css
@@ -244,7 +244,7 @@ aside ul {
 }
 aside li {
   padding: 5px;
-  overflow: hidden;
+  word-wrap: break-word;
 }
 aside ul li:first-child {
   padding-top: 0;
