--- a/public_html/fx/css/less.css
+++ b/public_html/fx/css/less.css
@@ -107,8 +107,11 @@ h1 a, h2 a, h3 a {
   text-decoration: none;
 }
 
+ol {
+  margin: 5px 0 5px 20px;
+}
 #teaser ol {
-  margin: 5px 0 5px 200px;
+  margin-left: 200px;
 }
 
 header {
