changed name to mean

--- a/system/templates/layout-frontend.html.twig
+++ b/system/templates/layout-frontend.html.twig
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<meta name="description" content="Bellcom Open Source ApS er en dansk virksomhed indenfor udvikling og leverance af open source baserede løsninger til vidensformidling, PR, marketing og salg." />
+<meta name="description" content="Mean ApS er en dansk virksomhed indenfor udvikling og leverance af open source baserede løsninger til vidensformidling, PR, marketing og salg." />
 <meta name="keywords" content="open source, CMS, CRM, remote backup, integration, internet udvikling, Google optimering, osl, drupal, ez, oscommerce, ehandel, e-handel, sugarCRM, åbne standarder, ip-telefoni, udvikling, hosting" />
 <link rel="shortcut icon" href="/fx/img/design/favicon.ico" type="image/x-icon" />
-<title>{% block title %}{% endblock %}bellcom open source aps</title>
+<title>{% block title %}{% endblock %}mean aps</title>
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -50,7 +50,7 @@
   </section>
 
   <footer>
-    <address>bellcom open source aps · bredgade 20, 1 6000 kolding · tlf: +45 7026 0085 · email: <a href="mailto:salg@bellcom.dk">salg@bellcom.dk</a> · cvr: xxxxxxx · <a href="http://support.bellcom.dk/index.php?_m=news&_a=view">driftstatus</a></address>
+    <address>mean aps · bredgade 20, 1 6000 kolding · tlf: +45 7026 0085 · email: <a href="mailto:salg@mean.dk">salg@mean.dk</a> · cvr: xxxxxxx · <a href="http://support.mean.dk/index.php?_m=news&_a=view">driftstatus</a></address>
   </footer>
 
 </body>
