--- a/system/templates/page.html.twig
+++ b/system/templates/page.html.twig
@@ -16,5 +16,8 @@
 {% endblock %}
 
 {% block aside %}
+  <aside>
+  {% include '_highlight.html.twig' %}
   {% include '_tweets.html.twig' %}
+  </aside>
 {% endblock %}
