--- a/system/templates/contact.html.twig
+++ b/system/templates/contact.html.twig
@@ -56,16 +56,6 @@
 
 {% block aside %}
   <aside>
-    <ul id="">
-      <li><h3>medarbejdere</h3></li>
-      <li>
-        <span>henrik farre</span>
-         ham med colaen, det lange hård og ez
-      </li>
-      <li>
-        <span>ulrik nielsen</span>
-        laver lidt af hvert, lidt til og hvad mere..
-      </li>
-    </ul>
+    {% include "_employees.html.twig" %}
   </aside>
 {% endblock %}
