--- a/public_html/fx/css/less.css
+++ b/public_html/fx/css/less.css
@@ -175,8 +175,10 @@ section#teaser img {
   float: left;
   margin-right: 20px;
 }
-section#teaser ul li {
+section#teaser ul {
   margin-left: 20px;
+}
+section#teaser ul li {
   list-style: square;
 }
 
