--- a/system/templates/contact.html.twig
+++ b/system/templates/contact.html.twig
@@ -5,7 +5,7 @@
 {% block teaser %}
   <section id="teaser">
     <img src="/fx/img/design/grass-house-trans.png" />
-    <p>Kontakt til mean kan gøres på to måder:</p>
+    <p>Kontakt til Mean ApS kan gøres på to måder:</p>
     <ol>
       <li>af dem der kan</li>
       <li>af dem der ikke kan</li>
