support author images

--- a/system/templates/backend/author/form.html.twig
+++ b/system/templates/backend/author/form.html.twig
@@ -59,4 +59,9 @@ $(function() {
     </tr>
   </table>
 </form>
+
+<article>
+  <p><strong>Note:</strong> images will be displayed in 50px width, so do not upload too large images.</p>
+</article>
+
 {% endblock %}
