--- a/system/templates/layout-frontend.html.twig
+++ b/system/templates/layout-frontend.html.twig
@@ -1,18 +1,19 @@
 <!doctype html>
-<html>
+<html lang="da">
 <head>
+<title>{% block title %}{% endblock %}Mean TI ApS</title>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<meta name="description" content="Mean ApS er en dansk virksomhed indenfor udvikling og leverance af open source baserede løsninger til vidensformidling, PR, marketing og salg." />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="Mean IT ApS er en dansk virksomhed indenfor udvikling og leverance af open source baserede løsninger til vidensformidling, PR, marketing og salg." />
 <meta name="keywords" content="open source, CMS, CRM, remote backup, integration, internet udvikling, Google optimering, osl, drupal, ez, oscommerce, ehandel, e-handel, sugarCRM, åbne standarder, ip-telefoni, udvikling, hosting" />
 <link rel="shortcut icon" href="/fx/img/design/favicon.ico" type="image/x-icon" />
-<title>{% block title %}{% endblock %}mean aps</title>
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.6.min.js"></script>
 <script type="text/javascript" src="/fx/scripts/bonzaii.js"></script>
-<link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css' />
+<link href='//fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css' />
 <link rel="stylesheet" media="all" href="/fx/css/less.css" />
 {% block header %}{% endblock %}
 </head>
