--- a/system/templates/layout-frontend.html.twig
+++ b/system/templates/layout-frontend.html.twig
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="da">
 <head>
-<title>{% block title %}{% endblock %}Mean TI ApS</title>
+<title>{% block title %}{% endblock %}Mean IT ApS</title>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
