--- a/system/templates/contact.html.twig
+++ b/system/templates/contact.html.twig
@@ -4,7 +4,7 @@
 
 {% block teaser %}
   <section id="teaser">
-    <img src="/fx/img/design/grass-house-trans.png" />
+    <a href="/" title="til forsiden"><img src="/fx/img/design/grass-house-trans.png" /></a>
     <p>Kontakt til Mean ApS kan gøres på to måder:</p>
     <ol>
       <li>af dem der kan</li>
