--- a/system/templates/index.html.twig
+++ b/system/templates/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block teaser %}
   <section id="teaser">
-    <img src="/fx/img/design/grass-house-trans.png" />
+    <a href="/" title="til forsiden"><img src="/fx/img/design/grass-house-trans.png" /></a>
     <p>Mean IT ApS tilbyder rådgivning og service til udvikling og drift af løsninger til alt indenfor kommunikation, marketing, salg og service via Internettet.</p>
     <p>Vores fokus er ”økologisk“ - det er baseret på indsigt i din forretning og individualiseret service i verdensklasse - uden skadelige tilsætningsstoffer.</p>
     <p>Vi lægger vægt på at fastholde og videreudvikle et højt fagligt niveau i såvel program udvikling som projekt gennemførelse og teknisk drift.</p>
