--- a/system/templates/layout-frontend.html.twig
+++ b/system/templates/layout-frontend.html.twig
@@ -51,7 +51,7 @@
   </section>
 
   <footer>
-    <address>mean aps · bredgade 20, 1 6000 kolding · tlf: +45 7026 0085 · email: <a href="mailto:salg@mean.dk">salg@mean.dk</a> · cvr: xxxxxxx · <a href="http://support.mean.dk/index.php?_m=news&_a=view">driftstatus</a></address>
+    <address>mean aps · bredgade 20, 1 6000 kolding · tlf: +45 7026 0085 · email: <a href="mailto:salg@mean.dk">salg@mean.dk</a> · cvr: 32342280 · <a href="http://support.mean.dk/index.php?_m=news&_a=view">driftstatus</a></address>
   </footer>
 
 </body>
