--- a/public_html/fx/css/less.css
+++ b/public_html/fx/css/less.css
@@ -44,8 +44,8 @@ a img {border: 0;}
 }
 
 .large, h2 {
-	font-size: 42px;
-	line-height: 48px;
+	font-size: 30px;
+	line-height: 30px;
   font-family: 'Covered By Your Grace', Georgia, serif;
   font-weight: normal;
 }
@@ -108,7 +108,7 @@ h1 a, h2 a, h3 a {
 }
 
 ol {
-  margin: 5px 0 5px 20px;
+  margin: 5px 0 5px 22px;
 }
 #teaser ul,
 #teaser ol {
@@ -171,12 +171,14 @@ section#teaser {
   background-image: url(/fx/img/design/stripe.png);
   min-height: 110px;
 }
-section#teaser img {
-  width: 160px;
+section#teaser a {
   float: left;
   margin-right: 20px;
+  width: 160px;
 }
+section#teaser img {}
 
+article ul li
 section#teaser ul li {
   list-style: square;
 }
@@ -232,7 +234,6 @@ article section.info span.tags:after {
 }
 article ul {
   margin-left: 22px;
-  list-style: square;
 }
 
 #context aside {
@@ -242,7 +243,7 @@ article ul {
 }
 #context h2 {
   background-image: url(/fx/img/design/stripe.png);
-  padding: 2px 2px 2px 10px;
+  padding: 10px 2px 10px 10px;
 }
 
 aside ul {
